changing button copy, fixing alert spacing

--- a/src/app/(pages)/codeLibrary/codeLibrary.module.scss
+++ b/src/app/(pages)/codeLibrary/codeLibrary.module.scss
@@ -13,7 +13,7 @@ $pageControlsHeight: 3rem;
     height: calc($pageContainerHeight - 2.5rem);
 
     .header {
-        height: $pageHeaderHeight;
+        // height: $pageHeaderHeight;
         font-size: inherit;
 
         &__title {
